manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-webhook-service
spec:
  selector:
    app: minio-webhook
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
